# scribblenot

./: .gitignore  AGENTS.md  AUDIT-2026-04-07.md  Cargo.toml  INDEX.md  MISSION-LOG-3-pathfinder-skill-polish.md  MISSION-LOG-active.md  MISSION-PERMISSIONS.json  README.md  TODOS.md  example-note.md  golden_note.md  roadmap.md
.cargo/: config.toml
.claude/: CLOSED-TASKS.md  TASKS.md  settings.local.json
data/: boilerplate.yml  branch_test.yml  brief.yml  conditions.yml  config.yml  default-theme.yml  infection.yml  infection_control.yml  intake.yml  intake_optional.yml  keybindings.yml  muscles.yml  objective.yml  objective_findings.yml  post-treatment.yml  remedial.yml  remex.yml  sections.yml  subjective.yml  subjective_consent.yml  treatment.yml  tx_mods.yml  tx_regions.yml
data - Copy/: boilerplate.yml  config.yml  infection_control.yml  keybindings.yml  muscles.yml  objective_findings.yml  sections.yml  tx_regions.yml
messages/: child_references.yml  duplicate_ids.yml  field_references.yml  file_io.yml  list_assigns.yml  template.yml  yaml_parse.yml
operations/: ACTIVE-MISSION  CLOSED-TASKS.md  CONTAINS-RULES.md  DEFAULT-PERMISSIONS.json  MISSION-1-LOG-hints-multichar-superconfirm.md  MISSION-11-BRIEF.md  MISSION-11-LOG-block-multifield-metadata.md  MISSION-11-PERMISSIONS.json  MISSION-12-BRIEF.md  MISSION-12-PERMISSIONS.json  MISSION-12-TESTS.md  MISSION-13-BRIEF.md  MISSION-13-LOG-yaml-data-hierarchy-SUCCESS.md  MISSION-13-PERMISSIONS.json  MISSION-13-TESTS.md  MISSION-14-LOG-iced-tray-port-SUCCESS.md  MISSION-14-REVIEW.md  MISSION-14-TESTS.md  (+8 more)
(+256 files in other folders)
