[package]
name = "scribblenot"
version = "0.5.4"
edition = "2021"

[[bin]]
name = "scribblenot"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "multi-window", "advanced"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
arboard = "3.4"
chrono = "0.4"
anyhow = "1.0"
simple-easing = "1.0.1"

[dev-dependencies]
tempfile = "3"
